--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -51,11 +51,7 @@
           [isForDashboard]="true"></refund-list>
         <log class="dashboard-box-component" *ngIf="item==LOG_TO_REVIEW && canViewLogModule()" [isForDashboard]="true">
         </log>
-        <provision-board class="dashboard-box-component" *ngIf="item==BOARD_AL"
-        [currentEmployee]="currentEmployee" [teamBoard]="'AL'" ></provision-board>
-        <provision-board class="dashboard-box-component" *ngIf="item==BOARD_FORMALITE"
-        [currentEmployee]="currentEmployee" [teamBoard]="'FORMALITE'" ></provision-board>
-
+        <provision-board class="dashboard-box-component" *ngIf="item==PROVISION_BOARD"></provision-board>
       </div>
     </div>
   </div>
@@ -64,6 +60,12 @@
   <div mat-menu-item *ngFor="let checkbox of checkboxes">
     <mat-checkbox [(ngModel)]="checkbox.value" (click)="toggleDisplay(checkbox.id);$event.stopPropagation()">
       {{checkbox.id}}
+    </mat-checkbox>
+  </div>
+  <mat-divider></mat-divider>
+  <div mat-menu-item *ngFor="let boxSize of boxSizesSelected">
+    <mat-checkbox [(ngModel)]="boxSize.value" (click)="toggleDisplaySize(boxSize.id);$event.stopPropagation()">
+      {{boxSize.id}}
     </mat-checkbox>
   </div>
 </mat-menu>
