--- a/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
@@ -51,6 +51,7 @@
                 formControlName="notice" [disabled]="!editMode" [(ngModel)]="selectedEntity.text" [init]="{
    height: 500,
    menubar: false,
+   entity_encoding : 'raw',
    plugins: [
      'table'
    ],
