--- a/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
+++ b/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
@@ -6,6 +6,9 @@
     <mat-tab label="Paiements">
       <payment-list></payment-list>
     </mat-tab>
+    <mat-tab label="Débours">
+      <debour-list></debour-list>
+    </mat-tab>
     <mat-tab label="Remboursements">
       <refund-list></refund-list>
     </mat-tab>
