--- a/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
@@ -9,7 +9,7 @@
     matSuffix (click)="addToNotes($event)" *ngIf="isDisabled && model!=undefined" class="pointer note-icon">
     adjust
   </mat-icon>
-  <mat-autocomplete autoActiveFirstOption panelOpen="true" #autoCompleteField="matAutocomplete"
+  <mat-autocomplete panelWidth="auto" autoActiveFirstOption panelOpen="true" #autoCompleteField="matAutocomplete"
     [displayWith]="displayLabel" (optionSelected)='optionSelected($event.option.value)'>
     <mat-option *ngFor="let type of filteredTypes  " [value]="type">
       {{displayLabel(type)}}
