--- a/client/src/app/modules/tiers/components/confrere/confrere.component.html
+++ b/client/src/app/modules/tiers/components/confrere/confrere.component.html
@@ -295,6 +295,11 @@
           [orderingSearch]="orderingSearch" [isForTiersIntegration]="true">
         </ordering-list>
       </mat-tab>
+      <mat-tab label="Prestations" *ngIf="selectedConfrere.id!=null && selectedConfrere.id!=undefined">
+        <provision-list class="integration-component" *ngIf="this.provisionSearch.customerOrders"
+          [affaireSearch]="provisionSearch" [isForTiersIntegration]="true">
+        </provision-list>
+      </mat-tab>
       <mat-tab label="Annonces" *ngIf="selectedConfrere.id!=null && selectedConfrere.id!=undefined">
         <announcement-list [confrere]="selectedConfrere"></announcement-list>
       </mat-tab>
