--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -220,6 +220,11 @@
             [orderingSearch]="orderingSearch" [isForTiersIntegration]="true">
           </ordering-list>
         </mat-tab>
+        <mat-tab label="Prestations" *ngIf="tiers.id!=null && tiers.id!=undefined">
+          <provision-list class="integration-component" *ngIf="this.provisionSearch.customerOrders"
+            [affaireSearch]="provisionSearch" [isForTiersIntegration]="true">
+          </provision-list>
+        </mat-tab>
         <mat-tab label="Factures" *ngIf="tiers.id!=null && tiers.id!=undefined">
           <invoice-list *ngIf="this.invoiceSearch.customerOrders && this.invoiceSearch.customerOrders.length>0"
             [invoiceSearch]="invoiceSearch" [isForTiersIntegration]="true"></invoice-list>
