--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -19,7 +19,7 @@
           </td>
           <td>
             <select-payment-types [(model)]="newDebour.paymentType" label="Mode de paiement" [form]="debourForm"
-              [filteredPaymentType]="[paymentTypeVirement,paymentTypeCb, paymentTypeCheques,paymentTypeEspeces]"
+              [filteredPaymentType]="[paymentTypeVirement,paymentTypeCb, paymentTypeCheques,paymentTypeEspeces,paymentTypeAccount]"
               propertyName="paymentType" [isMandatory]="true" [isDisabled]="!editMode"></select-payment-types>
           </td>
           <td *ngIf="newDebour.paymentType && newDebour.paymentType.id ==paymentTypeCb.id">
@@ -45,11 +45,6 @@
   </form>
   <sort-table [refreshTable]="refreshTable" [columns]="displayedColumns" [values]="provision.debours"
     tableName="Débours" class="margin-bottom"></sort-table>
-  <div class="row-field-container margin-bottom">
-    <button mat-raised-button *ngIf="!editMode" (click)="associateToPayment()" color="primary"
-      class="mini-fab-add">Associer un paiement aux débours
-    </button>
-  </div>
   <div *ngIf="provision.debours && provision.debours.length>0">
     <p>Total par authorité compétente</p>
     <ul *ngFor="let competentAuthority of getCompetentAuthorities()">
