--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -19,7 +19,7 @@
           </td>
           <td>
             <select-payment-types [(model)]="newDebour.paymentType" label="Mode de paiement" [form]="debourForm"
-              [filteredPaymentType]="[paymentTypeVirement,paymentTypeCb, paymentTypeCheques,paymentTypeEspeces,paymentTypeAccount]"
+              [filteredPaymentType]="[paymentTypeVirement,paymentTypeCb, paymentTypeCheques,paymentTypeEspeces,(newDebour.competentAuthority && newDebour.competentAuthority.competentAuthorityType.isDirectCharge)?paymentTypeAccount:paymentTypeEspeces]"
               propertyName="paymentType" [isMandatory]="true" [isDisabled]="!editMode"></select-payment-types>
           </td>
           <td *ngIf="newDebour.paymentType && newDebour.paymentType.id ==paymentTypeCb.id">
