--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -19,7 +19,12 @@
           </td>
           <td>
             <select-payment-types [(model)]="newDebour.paymentType" label="Mode de paiement" [form]="debourForm"
-              [filteredPaymentType]="[paymentTypeVirement,paymentTypeCb, paymentTypeCheques,paymentTypeEspeces,(newDebour.competentAuthority && newDebour.competentAuthority.competentAuthorityType.isDirectCharge)?paymentTypeAccount:paymentTypeEspeces]"
+              *ngIf="newDebour.competentAuthority && !newDebour.competentAuthority.competentAuthorityType.isDirectCharge"
+              [filteredPaymentType]="[paymentTypeVirement,paymentTypeCb, paymentTypeCheques,paymentTypeEspeces,paymentTypeAccount]"
+              propertyName="paymentType" [isMandatory]="true" [isDisabled]="!editMode"></select-payment-types>
+            <select-payment-types [(model)]="newDebour.paymentType" label="Mode de paiement" [form]="debourForm"
+              *ngIf="newDebour.competentAuthority && newDebour.competentAuthority.competentAuthorityType.isDirectCharge"
+              [filteredPaymentType]="[paymentTypeVirement,paymentTypeCb, paymentTypeCheques,paymentTypeEspeces]"
               propertyName="paymentType" [isMandatory]="true" [isDisabled]="!editMode"></select-payment-types>
           </td>
           <td *ngIf="newDebour.paymentType && newDebour.paymentType.id ==paymentTypeCb.id">
@@ -44,8 +49,8 @@
     </div>
   </form>
   <sort-table [refreshTable]="refreshTable" [columns]="displayedColumns" [values]="provision.debours"
-    tableName="Débours" class="margin-bottom"></sort-table>
-  <div *ngIf="provision.debours && provision.debours.length>0">
+    tableName="Débours"></sort-table>
+  <div *ngIf="provision.debours && provision.debours.length>0" class="margin-top">
     <p>Total par authorité compétente</p>
     <ul *ngFor="let competentAuthority of getCompetentAuthorities()">
       <li>{{competentAuthority.label}} : {{getTotalForCompetentAuthority(competentAuthority)}} €</li>
