--- a/client/src/app/modules/administration/components/referentials/referential-billing-type/referential-billing-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-billing-type/referential-billing-type.component.html
@@ -70,7 +70,7 @@
                 [form]="entityForm" propertyName="isNonTaxable"></generic-toggle>
             </td>
             <td>
-              <generic-toggle [(model)]="selectedEntity.isDebour" label="Est un débour ?" [form]="entityForm"
+              <generic-toggle [(model)]="selectedEntity.isDebour" label="Est un débours ?" [form]="entityForm"
                 propertyName="isDebour"></generic-toggle>
             </td>
           </tr>
