--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -4,7 +4,7 @@
       <table class="full-width">
         <tr>
           <td>
-            <select-billing-type-debour [(model)]="newDebour.billingType" label="Type de débour" [form]="debourForm"
+            <select-billing-type-debour [(model)]="newDebour.billingType" label="Type de débours" [form]="debourForm"
               propertyName="billingType" [isMandatory]="true" [isDisabled]="!editMode"></select-billing-type-debour>
           </td>
           <td>
