finalization of reporting module

--- a/client/src/app/routing/sidenav-list/sidenav-list.component.html
+++ b/client/src/app/routing/sidenav-list/sidenav-list.component.html
@@ -17,7 +17,7 @@
     [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/dashboard' )>=0}">
     <mat-icon>dashboard</mat-icon> <span>Tableau de bord</span>
   </a>
-  <a mat-list-item routerLink="/reporting" *ngIf="canViewReportingModule()"
+  <a mat-list-item routerLink="/reporting/list" *ngIf="canViewReportingModule()"
     [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/reporting' )>=0}">
     <mat-icon>trending_up</mat-icon> <span>Reporting</span>
   </a>
