--- a/client/src/app/modules/reporting/components/reporting/reporting.component.html
+++ b/client/src/app/modules/reporting/components/reporting/reporting.component.html
@@ -1,2 +1,9 @@
-<button (click)="loadPivot()">zz</button>
-<div id="output"></div>
+<div class="mat-elevation-z2 form-div">
+  <div class=" full-width padding-top">
+    <div id="output"></div>
+  </div>
+  <div class="row-field-container" *ngIf="displayExportButton()">
+    <button mat-raised-button (click)="exportToExcel()" color="primary" class="mini-fab-add">Exporter
+    </button>
+  </div>
+</div>
