--- a/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
@@ -21,9 +21,17 @@
             label="Plage de recherche" [form]="invoiceForm" propertyNameStart="startDate" propertyNameEnd="endDate">
           </generic-date-range-picker>
         </td>
-        <td>
+        <td *ngIf="!isForPaymentAssocationIntegration">
           <generic-toggle [(model)]="invoiceSearch.showToRecover" label="A recouvrer ?" [form]="invoiceForm"
             propertyName="showToRecover"></generic-toggle>
+        </td>
+        <td *ngIf="isForPaymentAssocationIntegration">
+          <generic-input [(model)]="invoiceSearch.customerOrderId" label="Numéro de commande" [form]="invoiceForm"
+            propertyName="customerOrderId" [isMandatory]="false"></generic-input>
+        </td>
+        <td *ngIf="isForPaymentAssocationIntegration">
+          <generic-input [(model)]="invoiceSearch.invoiceId" label="Numéro de facture" [form]="invoiceForm"
+            propertyName="invoiceId" [isMandatory]="false"></generic-input>
         </td>
         <td class="fab-td-button">
           <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="searchInvoices()" class="add-button">
