--- a/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
+++ b/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
@@ -81,6 +81,15 @@
                   </td>
                 </tr>
               </table>
+              <table class="full-width">
+                <tr>
+                  <td>
+                    <generic-input [(model)]="billingDocument.externalReference" label="Référence client"
+                      [form]="quotationManagementForm" propertyName="externalReference" [isMandatory]="false"
+                      [isDisabled]="!editMode" [maxLength]="250"></generic-input>
+                  </td>
+                </tr>
+              </table>
               <table class="full-width"
                 *ngIf="billingDocument && billingLabelTypeAffaire &&  billingDocument.billingLabelType && billingDocument.billingLabelType.id!=billingLabelTypeAffaire.id">
                 <tr>
