--- a/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
+++ b/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
@@ -187,6 +187,15 @@
               </td>
             </tr>
           </table>
+          <table class="full-width">
+            <tr>
+              <td>
+                <generic-textarea [(model)]="selectedcompetentAuthority.observations" label="Observations"
+                  [form]="entityForm2" propertyName="observations" [isMandatory]="false"
+                  [isDisabled]="!editMode"></generic-textarea>
+              </td>
+            </tr>
+          </table>
         </fieldset>
       </div>
     </form>
