--- a/client/src/app/modules/reporting/components/reporting/reporting.component.html
+++ b/client/src/app/modules/reporting/components/reporting/reporting.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z2 form-div">
+<div class="mat-elevation-z2 form-div mat-tab-group">
   <div class=" full-width padding-top">
     <div id="output"></div>
   </div>
