--- a/client/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -40,6 +40,11 @@
     <mat-tab label="Comptes" *ngIf="responsableAccountSearch && responsableAccountSearch.id">
       <accounting-record [tiersToDisplay]="responsableAccountSearch"></accounting-record>
     </mat-tab>
+    <mat-tab label="Reporting" *ngIf="tiers && tiers.id">
+      <reporting [hidden]="!dataToDisplay " [dataToDisplay]="dataToDisplay"
+        [reportName]="tiers.denomination?tiers.denomination:(tiers.firstname+' '+tiers.lastname)"
+        [settings]="reportingSettings"></reporting>
+    </mat-tab>
     <mat-tab label="Suivi" *ngIf="tiers.id!=null && tiers.id!=undefined">
       <tiers-followup [tiers]="tiers" [editMode]="editMode"></tiers-followup>
     </mat-tab>
