--- a/client/src/app/modules/administration/components/referentials/referential-billing-type/referential-billing-type.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-billing-type/referential-billing-type.component.html
@@ -71,7 +71,11 @@
             </td>
             <td>
               <generic-toggle [(model)]="selectedEntity.isDebour" label="Est un débours ?" [form]="entityForm"
-                propertyName="isDebour"></generic-toggle>
+                propertyName="isDebour" (onToggleChange)="toggleDebour()"></generic-toggle>
+            </td>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.isFee" label="Est un frais ?" [form]="entityForm"
+                propertyName="isFee" (onToggleChange)="toggleFees()"></generic-toggle>
             </td>
           </tr>
         </table>
