--- a/client/src/app/modules/invoicing/components/associate-payment-dialog/associate-payment-dialog.component.html
+++ b/client/src/app/modules/invoicing/components/associate-payment-dialog/associate-payment-dialog.component.html
@@ -126,7 +126,7 @@
         </div>
       </mat-step>
       <mat-step>
-        <ng-template matStepLabel>Choix d'une facture/débours</ng-template>
+        <ng-template matStepLabel>Choix d'une facture/débours/frais</ng-template>
         <p>Merci de choisir ci-dessous, la facture à associer avec ce solde.</p>
         <mat-tab-group animationDuration="0ms">
           <mat-tab label="Factures" bodyClass="tab-height-limit">
@@ -134,9 +134,10 @@
               [overrideTooltipAction]="'Associer cette facture au paiement'"
               [defaultStatusFilter]="[invoiceStatusSend]"></invoice-list>
           </mat-tab>
-          <mat-tab label="Débours" bodyClass="tab-height-limit" *ngIf="payment.paymentWay.id==paymentWayOutbound.id">
+          <mat-tab label="Débours/frais" bodyClass="tab-height-limit"
+            *ngIf="payment.paymentWay.id==paymentWayOutbound.id">
             <debour-list (actionBypass)="associateDebour($event)" [overrideIconAction]="'merge_type'"
-              [overrideTooltipAction]="'Associer ce débours au paiement'"
+              [overrideTooltipAction]="'Associer ce débours/frais au paiement'"
               [isForPaymentAssociation]="true"></debour-list>
           </mat-tab>
         </mat-tab-group>
