--- a/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
+++ b/client/src/app/modules/invoicing/components/invoicing/invoicing.component.html
@@ -6,7 +6,7 @@
     <mat-tab label="Paiements">
       <payment-list></payment-list>
     </mat-tab>
-    <mat-tab label="Débours">
+    <mat-tab label="Débours/frais">
       <debour-list></debour-list>
     </mat-tab>
     <mat-tab label="Remboursements">
