--- a/client/src/app/modules/quotation/components/bodacc-main/bodacc-main.component.html
+++ b/client/src/app/modules/quotation/components/bodacc-main/bodacc-main.component.html
@@ -46,7 +46,7 @@
       <provision-options (provisionChange)="provisionChangeFunction()" [editMode]="editMode" [provision]="provision">
       </provision-options>
     </mat-tab>
-    <mat-tab label="Débours" *ngIf="instanceOfCustomerOrder && !isStatusOpen">
+    <mat-tab label="Débours/frais" *ngIf="instanceOfCustomerOrder && !isStatusOpen">
       <add-debour [editMode]="editMode" [(provision)]="provision">
       </add-debour>
     </mat-tab>
