--- a/client/src/app/modules/quotation/components/debour-list/debour-list.component.html
+++ b/client/src/app/modules/quotation/components/debour-list/debour-list.component.html
@@ -21,7 +21,7 @@
             [isMandatory]="false"></autocomplete-customer-order>
         </td>
         <td>
-          <generic-toggle [(model)]="debourSearch.isNonAssociated" label="Masquer les débours associés ?"
+          <generic-toggle [(model)]="debourSearch.isNonAssociated" label="Masquer les débours/frais associés ?"
             [form]="debourForm" propertyName="isNonAssociated"></generic-toggle>
         </td>
         <td>
