--- a/client/src/app/modules/invoicing/components/debours-amount-taxable-dialog/debours-amount-taxable-dialog.component.html
+++ b/client/src/app/modules/invoicing/components/debours-amount-taxable-dialog/debours-amount-taxable-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Montant non taxable</h1>
 <div mat-dialog-content>
-  <p>Indiquer le montant non taxable pour ce débours :</p>
+  <p>Indiquer le montant non taxable pour ce débours (max. {{maxAmount}} € ) :</p>
   <generic-input [(model)]="nonTaxableAmount" label="Montant non taxable" [form]="amountForm" propertyName="amount"
     [isMandatory]="true" [isDisabled]="false" type="number" (onInputChange)="valueModified()"></generic-input>
 </div>
